Fix spacing and optimise slideshow for iPad
#12

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -648,3 +648,23 @@ body.is_safari {
 		text-rendering: auto;
 	}
 }
+
+body.is_ipad {
+	.jss-slider {
+		.owl-carousel {
+			.jss-title-description {
+				.jss-title * {
+					font-size: 30px;
+					line-height: 34px;
+				}
+			}
+		}
+		.btn.btn-large {
+			font-size: 15px;
+			padding: 6px 12px;
+		}
+	}
+	#main-content {
+		margin-bottom: 0;
+	}
+}
